Fixed incorrect license

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,11 +3,11 @@ name        = "trivert"
 version     = "0.1.0"
 authors     = ["Kyle Finlay <kyle.finlay01@gmail.com>"]
 description = "A powerful game framework written in Rust"
-license     = "BSD-3-Clause"
+license     = "Apache-2.0"
 
-[dependencies.trivert_math]
-path    = "src/trivert_math"
-version = "0.1.0"
+[dependencies]
+trivert_math    = {version = "0.1.0", path = "src/trivert_math"}
+trivert_window  = {version = "0.1.0", path = "src/trivert_window"}
 
 [lib]
 path        = "src/lib.rs"
