Started work on new utilities module

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,6 +7,7 @@ license     = "Apache-2.0"
 
 [dependencies]
 trivert_math    = {version = "0.1.0", path = "src/trivert_math"}
+trivert_utility = {version = "0.1.0", path = "src/trivert_utility"}
 trivert_window  = {version = "0.1.0", path = "src/trivert_window"}
 
 [lib]
