--- a/src/trivert_window/Cargo.toml
+++ b/src/trivert_window/Cargo.toml
@@ -6,7 +6,8 @@ description = "Window library for TriVert"
 license     = "Apache-2.0"
 
 [dependencies]
-trivert_math  = {version = "0.1.0", path = "../trivert_math"}
+trivert_math  = {version = "0.1.0", path  = "../trivert_math"}
+libloading    = {version = "0.2.1", git   = "https://github.com/nagisa/rust_libloading"}
 
 [lib]
 name = "trivert_window"
